syntax = "proto3";

package product;

service Products {
    rpc GetProducts(Empty) returns (ProductList){}
    rpc GetProductById(ProductId) returns (GetProductByIdResponse) {}
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc DeleteProductById(ProductId) returns (DeletedProductResponse) {}
}

message Product {
    string id = 1;
    string name = 2;
    string price = 3;
}

message GetProductByIdResponse {
    string message = 1;
    optional Product product = 2;
}

message CreateProductRequest {
    string name = 1;
    string price = 2;
}

message CreateProductResponse {
    Product product = 1;
}

message ProductId {
    string id = 1;
}

message Empty {}

message ProductList {
    repeated Product products = 1;
}

message DeletedProductResponse {
    Product deletedproduct = 1;
}